# game-engine

./: CMakeLists.txt  parse_asan
res/shaders/: CMakeLists.txt  shader.vert
src/: CMakeLists.txt  main.cpp  main.cppm  project_resource.hpp.in
src/pl/: CMakeLists.txt  macro.hpp
src/pl/core/: CMakeLists.txt  _module.cppm  array.cppm  array_list.cppm  concepts.cppm  defer.cppm  error.cppm  handle.cppm  iterator.cppm  memory.cppm  null.cppm  numeric.cppm  optional.cppm  result_error.cppm  singleton.cppm  span.cppm  tags.cppm  traits.cppm  utility.cppm
src/pl/vulkan/: CMakeLists.txt  _module.cppm  config.cpp  config.cppm  error.cppm  renderer.cpp  renderer.cppm
test/pl/: CMakeLists.txt  test_macro.hpp
test/pl/core/: CMakeLists.txt  _module.cppm  side_effects.cppm
test/pl/core/static_assertion/: CMakeLists.txt  array.cpp  array_list.cpp  memory.cpp  span.cpp
